[package]
name = "orca_whirlpools_client"
version = "0.1.0"
description = "Orca's low-level rust sdk to interact with Orca's on-chain Whirlpool program."
include = ["src/*"]
documentation = "https://orca-so.github.io/whirlpools/"
homepage = "https://orca.so"
repository = "https://github.com/orca-so/whirlpools"
license = "Apache-2.0"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
authors = ["team@orca.so"]
edition = "2021"

[features]
default = []
anchor = ["dep:anchor-lang"]
core-types = ["dep:orca_whirlpools_core"]
fetch = []

[dependencies]
solana-program = { version = "=1.16.25" }
solana-client = { version = "=1.16.25" }
solana-sdk = { version = "=1.16.25" }
solana-account-decoder = { version = "=1.16.25" }
spl-token = { version = "^3.5" }
spl-token-2022 = { version = "^2.0" }
spl-memo = { version = "^3.0" }
spl-associated-token-account = { version = "^2.0" }
anchor-lang = { version = "0.29", optional = true }
orca_whirlpools_core = { path = "../core", optional = true }
bincode = { version = "^1.3" }
serde = { version = "^1.0" }
serde_json = { version = "^1.0" }
borsh = { version = "^1.2" }

[dev-dependencies]
serial_test = { version = "^3.1" }
solana-program-test = { version = "=1.16.25" }
solana-version = { version = "=1.16.25" }
async-trait = { version = "^0.1" }
base64 = { version = "^0.20" }
toml = { version = "^0.7" }
tokio = { version = "^1.0", features = ["sync"] }
spl-pod = { version = "^0.1" }
